@@ -277,7 +277,7 @@ a participant for the event(s).</p>
 you may skip this section.</p>
 
 <p>If your administrator has enabled Remote Subscriptions, you may enable 
-it for your personal account by clicking 'Admin' => 'Preferences' => 'Subscribe/Publish' 
+it for your personal account by clicking 'Admin' =&gt; 'Preferences' =&gt; 'Subscribe/Publish' 
 and selecting 'Yes' &amp; save.</p>
 
 <p>If a user has this option enabled, the URL for accessing the calendar via an 
